--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/scss/main.scss" />
-    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <title>Designo</title>
   </head>
   <body>
     <header id="header-container">
@@ -42,8 +46,38 @@
           </div>
         </div>
 
+        <div class="hero-oval">
+          <img src="./assets/home/desktop/bg-pattern-hero-home.svg" alt="" />
+        </div>
+
         <div class="hero-img">
-          <img src="./assets/home/desktop/image-hero-phone.png" alt="" />
+          <img src="./assets/home/desktop/image-hero-phone-re-3.png" alt="" />
+        </div>
+        <!-- <img src="./assets/home/desktop/image-hero-phone-re.png" alt="" /> -->
+      </div>
+    </section>
+
+    <section id="services-container">
+      <div class="services">
+        <div class="service web">
+          <div class="service-type">web design</div>
+          <div class="link">
+            view projects <span><i class="fa fa-angle-right"></i></span>
+          </div>
+        </div>
+
+        <div class="service app">
+          <div class="service-type">app design</div>
+          <div class="link">
+            view projects <span><i class="fa fa-angle-right"></i></span>
+          </div>
+        </div>
+
+        <div class="service graphic">
+          <div class="service-type">graphic design</div>
+          <div class="link">
+            view projects <span><i class="fa fa-angle-right"></i></span>
+          </div>
         </div>
       </div>
     </section>
