--- a/index.html
+++ b/index.html
@@ -60,23 +60,35 @@
     <section id="services-container">
       <div class="services">
         <div class="service web">
-          <div class="service-type">web design</div>
-          <div class="link">
-            view projects <span><i class="fa fa-angle-right"></i></span>
+          <div class="content">
+            <div class="service-type">web design</div>
+            <div class="link">
+              <a href=""
+                >view projects <span><i class="fa fa-angle-right"></i></span
+              ></a>
+            </div>
           </div>
         </div>
 
         <div class="service app">
-          <div class="service-type">app design</div>
-          <div class="link">
-            view projects <span><i class="fa fa-angle-right"></i></span>
+          <div class="content">
+            <div class="service-type">app design</div>
+            <div class="link">
+              <a href=""
+                >view projects <span><i class="fa fa-angle-right"></i></span
+              ></a>
+            </div>
           </div>
         </div>
 
         <div class="service graphic">
-          <div class="service-type">graphic design</div>
-          <div class="link">
-            view projects <span><i class="fa fa-angle-right"></i></span>
+          <div class="content">
+            <div class="service-type">graphic design</div>
+            <div class="link">
+              <a href=""
+                >view projects <span><i class="fa fa-angle-right"></i></span
+              ></a>
+            </div>
           </div>
         </div>
       </div>
