--- a/index.html
+++ b/index.html
@@ -93,5 +93,74 @@
         </div>
       </div>
     </section>
+
+    <section id="values-container">
+      <div class="values">
+        <div class="value">
+          <div class="value-img">
+            <img
+              src="./assets/home/desktop/illustration-passionate.svg"
+              alt=""
+            />
+          </div>
+
+          <div class="value-heading">passionate</div>
+
+          <div class="value-copy">
+            Each project starts with an in-depth brand research to ensure we
+            only create products that serve a purpose. We merge art, design, and
+            technology into exciting new solutions.
+          </div>
+        </div>
+
+        <div class="value">
+          <div class="value-img">
+            <img
+              src="./assets/home/desktop/illustration-resourceful.svg"
+              alt=""
+            />
+          </div>
+
+          <div class="value-heading">resourceful</div>
+
+          <div class="value-copy">
+            Everything that we do has a strategic purpose. We use an agile
+            approach in all of our projects and value customer collaboration. It
+            guarantees superior results that fulfill our clients’ needs.
+          </div>
+        </div>
+
+        <div class="value">
+          <div class="value-img">
+            <img src="./assets/home/desktop/illustration-friendly.svg" alt="" />
+          </div>
+
+          <div class="value-heading">friendly</div>
+
+          <div class="value-copy">
+            We are a group of enthusiastic folks who know how to put people
+            first. Our success depends on our customers, and we strive to give
+            them the best experience a company can provide.
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="cta-container">
+      <div class="cta">
+        <div class="cta-content">
+          <h2 class="cta-content-header">Let's talk about your project</h2>
+
+          <p class="cta-content-copy">
+            Ready to take it to the next level? Contact us today and find out
+            how our expertise can help your business grow.
+          </p>
+        </div>
+
+        <div class="cta-btn">
+          <a href="">get in touch</a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
