--- a/index.html
+++ b/index.html
@@ -104,12 +104,14 @@
             />
           </div>
 
-          <div class="value-heading">passionate</div>
+          <div class="value-content">
+            <div class="value-heading">passionate</div>
 
-          <div class="value-copy">
-            Each project starts with an in-depth brand research to ensure we
-            only create products that serve a purpose. We merge art, design, and
-            technology into exciting new solutions.
+            <div class="value-copy">
+              Each project starts with an in-depth brand research to ensure we
+              only create products that serve a purpose. We merge art, design,
+              and technology into exciting new solutions.
+            </div>
           </div>
         </div>
 
@@ -121,12 +123,14 @@
             />
           </div>
 
-          <div class="value-heading">resourceful</div>
+          <div class="value-content">
+            <div class="value-heading">resourceful</div>
 
-          <div class="value-copy">
-            Everything that we do has a strategic purpose. We use an agile
-            approach in all of our projects and value customer collaboration. It
-            guarantees superior results that fulfill our clients’ needs.
+            <div class="value-copy">
+              Everything that we do has a strategic purpose. We use an agile
+              approach in all of our projects and value customer collaboration.
+              It guarantees superior results that fulfill our clients’ needs.
+            </div>
           </div>
         </div>
 
@@ -135,12 +139,14 @@
             <img src="./assets/home/desktop/illustration-friendly.svg" alt="" />
           </div>
 
-          <div class="value-heading">friendly</div>
+          <div class="value-content">
+            <div class="value-heading">friendly</div>
 
-          <div class="value-copy">
-            We are a group of enthusiastic folks who know how to put people
-            first. Our success depends on our customers, and we strive to give
-            them the best experience a company can provide.
+            <div class="value-copy">
+              We are a group of enthusiastic folks who know how to put people
+              first. Our success depends on our customers, and we strive to give
+              them the best experience a company can provide.
+            </div>
           </div>
         </div>
       </div>
