--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <header id="header-container">
       <div class="header">
         <div class="logo">
-          <img src="./assets/shared/desktop/logo-dark.png" alt="" />
+          <a href="index.html"
+            ><img src="./assets/shared/desktop/logo-dark.png" alt=""
+          /></a>
         </div>
 
         <div class="links-container">
@@ -57,6 +59,10 @@
       </div>
     </section>
 
+    <div class="bg-pattern pattern-1">
+      <img src="./assets/shared/desktop/bg-pattern-leaf.svg" alt="" />
+    </div>
+
     <section id="services-container">
       <div class="services">
         <a href="web-design.html" class="service web">
@@ -96,6 +102,12 @@
               src="./assets/home/desktop/illustration-passionate.svg"
               alt=""
             />
+            <div class="value-pattern pattern-1">
+              <img
+                src="./assets/shared/desktop/bg-pattern-small-circle.svg"
+                alt=""
+              />
+            </div>
           </div>
 
           <div class="value-content">
@@ -115,6 +127,12 @@
               src="./assets/home/desktop/illustration-resourceful.svg"
               alt=""
             />
+            <div class="value-pattern pattern-2">
+              <img
+                src="./assets/shared/desktop/bg-pattern-small-circle.svg"
+                alt=""
+              />
+            </div>
           </div>
 
           <div class="value-content">
@@ -131,6 +149,13 @@
         <div class="value">
           <div class="value-img">
             <img src="./assets/home/desktop/illustration-friendly.svg" alt="" />
+
+            <div class="value-pattern pattern-3">
+              <img
+                src="./assets/shared/desktop/bg-pattern-small-circle.svg"
+                alt=""
+              />
+            </div>
           </div>
 
           <div class="value-content">
@@ -146,7 +171,17 @@
       </div>
     </section>
 
+    <div class="bg-pattern pattern-2">
+      <img src="./assets/shared/desktop/bg-pattern-leaf.svg" alt="" />
+    </div>
+
     <section id="cta-container">
+      <div class="cta-pattern">
+        <img
+          src="./assets/shared/desktop/bg-pattern-call-to-action.svg"
+          alt=""
+        />
+      </div>
       <div class="cta">
         <div class="cta-content">
           <h2 class="cta-content-header">Let's talk about your project</h2>
