--- a/web-design.html
+++ b/web-design.html
@@ -15,7 +15,9 @@
     <header id="header-container">
       <div class="header">
         <div class="logo">
-          <img src="./assets/shared/desktop/logo-dark.png" alt="" />
+          <a href="index.html"
+            ><img src="./assets/shared/desktop/logo-dark.png" alt=""
+          /></a>
         </div>
 
         <div class="links-container">
@@ -28,7 +30,36 @@
       </div>
     </header>
 
+    <section id="hero-container">
+      <div class="hero-pattern">
+        <img
+          src="./assets/shared/desktop/bg-pattern-call-to-action.svg"
+          alt=""
+        />
+      </div>
+      <div class="hero">
+        <div class="hero-content">
+          <h2 class="hero-content-header">Let's talk about your project</h2>
+
+          <p class="hero-content-copy">
+            Ready to take it to the next level? Contact us today and find out
+            how our expertise can help your business grow.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <div class="bg-pattern pattern-1">
+      <img src="./assets/shared/desktop/bg-pattern-leaf.svg" alt="" />
+    </div>
+
     <section id="cta-container">
+      <div class="cta-pattern">
+        <img
+          src="./assets/shared/desktop/bg-pattern-call-to-action.svg"
+          alt=""
+        />
+      </div>
       <div class="cta">
         <div class="cta-content">
           <h2 class="cta-content-header">Let's talk about your project</h2>
