--- a/web-design.html
+++ b/web-design.html
@@ -39,11 +39,11 @@
       </div>
       <div class="hero">
         <div class="hero-content">
-          <h2 class="hero-content-header">Let's talk about your project</h2>
+          <h2 class="hero-content-header">Web Design</h2>
 
           <p class="hero-content-copy">
-            Ready to take it to the next level? Contact us today and find out
-            how our expertise can help your business grow.
+            We build websites that serve as powerful marketing tools and bring
+            memorable brand experiences.
           </p>
         </div>
       </div>
@@ -52,6 +52,105 @@
     <div class="bg-pattern pattern-1">
       <img src="./assets/shared/desktop/bg-pattern-leaf.svg" alt="" />
     </div>
+
+    <section id="core-container">
+      <div class="cores">
+        <div class="core">
+          <div class="core-img">
+            <img src="./assets/web-design/desktop/image-express.jpg" alt="" />
+          </div>
+          <div class="core-content">
+            <h3 class="core-content-header">express</h3>
+            <p class="core-content-copy">
+              A multi-carrier shipping website for ecommerce businesses
+            </p>
+          </div>
+        </div>
+
+        <div class="core">
+          <div class="core-img">
+            <img src="./assets/web-design/desktop/image-transfer.jpg" alt="" />
+          </div>
+          <div class="core-content">
+            <h3 class="core-content-header">transfer</h3>
+            <p class="core-content-copy">
+              Site for low-cost money transfers and sending money within seconds
+            </p>
+          </div>
+        </div>
+
+        <div class="core">
+          <div class="core-img">
+            <img src="./assets/web-design/desktop/image-photon.jpg" alt="" />
+          </div>
+          <div class="core-content">
+            <h3 class="core-content-header">photon</h3>
+            <p class="core-content-copy">
+              A state-of-the-art music player with high-resolution audio and DSP
+              effects
+            </p>
+          </div>
+        </div>
+
+        <div class="core">
+          <div class="core-img">
+            <img src="./assets/web-design/desktop/image-builder.jpg" alt="" />
+          </div>
+          <div class="core-content">
+            <h3 class="core-content-header">builder</h3>
+            <p class="core-content-copy">
+              Connects users with local contractors based on their location
+            </p>
+          </div>
+        </div>
+
+        <div class="core">
+          <div class="core-img">
+            <img src="./assets/web-design/desktop/image-blogr.jpg" alt="" />
+          </div>
+          <div class="core-content">
+            <h3 class="core-content-header">blogr</h3>
+            <p class="core-content-copy">
+              Blogr is a platform for creating an online blog or publication
+            </p>
+          </div>
+        </div>
+
+        <div class="core">
+          <div class="core-img">
+            <img src="./assets/web-design/desktop/image-camp.jpg" alt="" />
+          </div>
+          <div class="core-content">
+            <h3 class="core-content-header">camp</h3>
+            <p class="core-content-copy">
+              Get expert training in coding, data, design, and digital marketing
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="services-container">
+      <div class="services">
+        <a href="app-design.html" class="service app">
+          <div class="content">
+            <div class="service-type">app design</div>
+            <div class="link">
+              view projects <span><i class="fa fa-angle-right"></i></span>
+            </div>
+          </div>
+        </a>
+
+        <a href="graphic-design.html" class="service graphic">
+          <div class="content">
+            <div class="service-type">graphic design</div>
+            <div class="link">
+              view projects <span><i class="fa fa-angle-right"></i></span>
+            </div>
+          </div>
+        </a>
+      </div>
+    </section>
 
     <section id="cta-container">
       <div class="cta-pattern">
