--- a/app-design.html
+++ b/app-design.html
@@ -30,9 +30,119 @@
       </div>
     </header>
 
+    <section id="hero-container">
+      <div class="hero-pattern">
+        <img
+          src="./assets/app-design/desktop/bg-pattern-intro-app.svg"
+          alt=""
+        />
+      </div>
+      <div class="hero">
+        <div class="hero-content">
+          <h2 class="hero-content-header">App Design</h2>
+
+          <p class="hero-content-copy">
+            Our mobile designs bring intuitive digital solutions to your
+            customers right at their fingertips.
+          </p>
+        </div>
+      </div>
+    </section>
+
     <div class="bg-pattern pattern-1">
       <img src="./assets/shared/desktop/bg-pattern-leaf.svg" alt="" />
     </div>
+
+    <section id="core-container">
+      <div class="cores">
+        <div class="core">
+          <div class="core-img">
+            <img src="./assets/app-design/desktop/image-airfilter.jpg" alt="" />
+          </div>
+          <div class="core-content">
+            <h3 class="core-content-header">airfilter</h3>
+            <p class="core-content-copy">
+              Solving the problem of poor indoor air quality by filtering the
+              air
+            </p>
+          </div>
+        </div>
+
+        <div class="core">
+          <div class="core-img">
+            <img src="./assets/app-design/desktop/image-eyecam.jpg" alt="" />
+          </div>
+          <div class="core-content">
+            <h3 class="core-content-header">eyecam</h3>
+            <p class="core-content-copy">
+              Product that lets you edit your favorite photos and videos at any
+              time
+            </p>
+          </div>
+        </div>
+
+        <div class="core">
+          <div class="core-img">
+            <img src="./assets/app-design/desktop/image-faceit.jpg" alt="" />
+          </div>
+          <div class="core-content">
+            <h3 class="core-content-header">faceit</h3>
+            <p class="core-content-copy">
+              Get to meet your favorite internet superstar with the faceit app
+            </p>
+          </div>
+        </div>
+
+        <div class="core">
+          <div class="core-img">
+            <img src="./assets/app-design/desktop/image-todo.jpg" alt="" />
+          </div>
+          <div class="core-content">
+            <h3 class="core-content-header">todo</h3>
+            <p class="core-content-copy">
+              A todo app that features cloud sync with light and dark mode
+            </p>
+          </div>
+        </div>
+
+        <div class="core">
+          <div class="core-img">
+            <img
+              src="./assets/app-design/desktop/image-loopstudios.jpg"
+              alt=""
+            />
+          </div>
+          <div class="core-content">
+            <h3 class="core-content-header">loopstudios</h3>
+            <p class="core-content-copy">
+              A VR experience app made for Loopstudios
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="services-container">
+      <div class="services">
+        <a href="web-design.html" class="service web">
+          <div class="content">
+            <div class="service-type">web design</div>
+            <div class="link">
+              view projects <span><i class="fa fa-angle-right"></i></span>
+            </div>
+          </div>
+        </a>
+
+        <a href="graphic-design.html" class="service graphic">
+          <div class="content">
+            <div class="service-type">graphic design</div>
+            <div class="link">
+              view projects <span><i class="fa fa-angle-right"></i></span>
+            </div>
+          </div>
+        </a>
+      </div>
+    </section>
 
     <section id="cta-container">
       <div class="cta-pattern">
