--- a/graphic-design.html
+++ b/graphic-design.html
@@ -30,9 +30,99 @@
       </div>
     </header>
 
+    <section id="hero-container">
+      <div class="hero-pattern">
+        <img
+          src="./assets/graphic-design/desktop/bg-pattern-intro-graphic.svg"
+          alt=""
+        />
+      </div>
+      <div class="hero">
+        <div class="hero-content">
+          <h2 class="hero-content-header">Graphic Design</h2>
+
+          <p class="hero-content-copy">
+            We deliver eye-catching branding materials that are tailored to meet
+            your business objectives.
+          </p>
+        </div>
+      </div>
+    </section>
+
     <div class="bg-pattern pattern-1">
       <img src="./assets/shared/desktop/bg-pattern-leaf.svg" alt="" />
     </div>
+
+    <section id="core-container">
+      <div class="cores graphic">
+        <div class="core">
+          <div class="core-img">
+            <img
+              src="./assets/graphic-design/desktop/image-change.jpg"
+              alt=""
+            />
+          </div>
+          <div class="core-content">
+            <h3 class="core-content-header">tim brown</h3>
+            <p class="core-content-copy">
+              A book cover designed for Tim Brown’s new release, ‘Change’
+            </p>
+          </div>
+        </div>
+
+        <div class="core">
+          <div class="core-img">
+            <img
+              src="./assets/graphic-design/desktop/image-boxed-water.jpg"
+              alt=""
+            />
+          </div>
+          <div class="core-content">
+            <h3 class="core-content-header">boxed water</h3>
+            <p class="core-content-copy">
+              A simple packaging concept made for Boxed Water
+            </p>
+          </div>
+        </div>
+
+        <div class="core">
+          <div class="core-img">
+            <img
+              src="./assets/graphic-design/desktop/image-science.jpg"
+              alt=""
+            />
+          </div>
+          <div class="core-content">
+            <h3 class="core-content-header">science!</h3>
+            <p class="core-content-copy">
+              A poster made in collaboration with the Federal Art Project
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="services-container">
+      <div class="services">
+        <a href="app-design.html" class="service app">
+          <div class="content">
+            <div class="service-type">app design</div>
+            <div class="link">
+              view projects <span><i class="fa fa-angle-right"></i></span>
+            </div>
+          </div>
+        </a>
+
+        <a href="web-design.html" class="service web">
+          <div class="content">
+            <div class="service-type">web design</div>
+            <div class="link">
+              view projects <span><i class="fa fa-angle-right"></i></span>
+            </div>
+          </div>
+        </a>
+      </div>
+    </section>
 
     <section id="cta-container">
       <div class="cta-pattern">
