--- a/about.html
+++ b/about.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/scss/graphic-design.scss" />
+    <link rel="stylesheet" href="src/scss/about.scss" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <title>Graphic Design</title>
+    <title>About</title>
   </head>
   <body>
     <header id="header-container">
@@ -30,21 +30,55 @@
       </div>
     </header>
 
-    <section id="hero-container">
-      <div class="hero-pattern">
-        <img
-          src="./assets/graphic-design/desktop/bg-pattern-intro-graphic.svg"
-          alt=""
-        />
-      </div>
-      <div class="hero">
-        <div class="hero-content">
-          <h2 class="hero-content-header">Graphic Design</h2>
+    <section id="about-hero-container">
+      <div class="about-hero">
+        <div class="about-hero-contents">
+          <h1 class="about-hero-header">About Us</h1>
 
-          <p class="hero-content-copy">
-            We deliver eye-catching branding materials that are tailored to meet
-            your business objectives.
+          <p class="about-hero-copy">
+            Founded in 2010, we are a creative agency that produces lasting
+            results for our clients. We’ve partnered with many startups,
+            corporations, and nonprofits alike to craft designs that make real
+            impact. We’re always looking forward to creating brands, products,
+            and digital experiences that connect with our clients’ audiences.
           </p>
+        </div>
+
+        <div class="about-hero-oval">
+          <img src="./assets/home/desktop/bg-pattern-hero-home.svg" alt="" />
+        </div>
+
+        <div class="about-hero-img"></div>
+      </div>
+    </section>
+
+    <section id="talent-container">
+      <div class="talent">
+        <div class="talent-img"></div>
+
+        <div class="talent-contents">
+          <h1 class="talent-header">World-class talent</h1>
+
+          <p class="talent-copy">
+            We are a crew of strategists, problem-solvers, and technologists.
+            Every design is thoughtfully crafted from concept to launch,
+            ensuring success in its given market. We are constantly updating our
+            skills in a myriad of platforms.
+            <span
+              >Our team is multi-disciplinary and we are not merely interested
+              in form — content and meaning are just as important. We give great
+              importance to craftsmanship, service, and prompt delivery. Clients
+              have always been impressed with our high-quality outcomes that
+              encapsulates their brand’s story and mission.</span
+            >
+          </p>
+        </div>
+
+        <div class="talent-pattern">
+          <img
+            src="./assets/shared/desktop/bg-pattern-two-circles.svg"
+            alt=""
+          />
         </div>
       </div>
     </section>
@@ -53,76 +87,9 @@
       <img src="./assets/shared/desktop/bg-pattern-leaf.svg" alt="" />
     </div>
 
-    <section id="core-container">
-      <div class="cores graphic">
-        <div class="core">
-          <div class="core-img">
-            <img
-              src="./assets/graphic-design/desktop/image-change.jpg"
-              alt=""
-            />
-          </div>
-          <div class="core-content">
-            <h3 class="core-content-header">tim brown</h3>
-            <p class="core-content-copy">
-              A book cover designed for Tim Brown’s new release, ‘Change’
-            </p>
-          </div>
-        </div>
-
-        <div class="core">
-          <div class="core-img">
-            <img
-              src="./assets/graphic-design/desktop/image-boxed-water.jpg"
-              alt=""
-            />
-          </div>
-          <div class="core-content">
-            <h3 class="core-content-header">boxed water</h3>
-            <p class="core-content-copy">
-              A simple packaging concept made for Boxed Water
-            </p>
-          </div>
-        </div>
-
-        <div class="core">
-          <div class="core-img">
-            <img
-              src="./assets/graphic-design/desktop/image-science.jpg"
-              alt=""
-            />
-          </div>
-          <div class="core-content">
-            <h3 class="core-content-header">science!</h3>
-            <p class="core-content-copy">
-              A poster made in collaboration with the Federal Art Project
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="services-container">
-      <div class="services">
-        <a href="app-design.html" class="service app">
-          <div class="content">
-            <div class="service-type">app design</div>
-            <div class="link">
-              view projects <span><i class="fa fa-angle-right"></i></span>
-            </div>
-          </div>
-        </a>
-
-        <a href="web-design.html" class="service web">
-          <div class="content">
-            <div class="service-type">web design</div>
-            <div class="link">
-              view projects <span><i class="fa fa-angle-right"></i></span>
-            </div>
-          </div>
-        </a>
-      </div>
-    </section>
+    <div class="bg-pattern pattern-2">
+      <img src="./assets/shared/desktop/bg-pattern-leaf.svg" alt="" />
+    </div>
 
     <section id="cta-container">
       <div class="cta-pattern">
