--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
         <div class="links-container">
           <ul class="links">
-            <li class="link"><a href="">our company</a></li>
-            <li class="link"><a href="">locations</a></li>
-            <li class="link"><a href="">contact</a></li>
+            <li class="link"><a href="about.html">our company</a></li>
+            <li class="link"><a href="locations.html">locations</a></li>
+            <li class="link"><a href="contact.html">contact</a></li>
           </ul>
         </div>
       </div>
