--- a/about.html
+++ b/about.html
@@ -52,6 +52,10 @@
       </div>
     </section>
 
+    <div class="bg-pattern pattern-1">
+      <img src="./assets/shared/desktop/bg-pattern-leaf.svg" alt="" />
+    </div>
+
     <section id="talent-container">
       <div class="talent">
         <div class="talent-img"></div>
@@ -83,13 +87,89 @@
       </div>
     </section>
 
-    <div class="bg-pattern pattern-1">
-      <img src="./assets/shared/desktop/bg-pattern-leaf.svg" alt="" />
-    </div>
+    <section id="locations-choice-container">
+      <div class="locations-choice">
+        <div class="location-choice">
+          <div class="location-choice-img">
+            <img
+              src="./assets/shared//desktop/illustration-canada.svg"
+              alt=""
+            />
+          </div>
+
+          <div class="location-choice-content">
+            <h2 class="location-name">canada</h2>
+
+            <a href="">see location</a>
+          </div>
+        </div>
+
+        <div class="location-choice">
+          <div class="location-choice-img">
+            <img
+              src="./assets/shared/desktop/illustration-australia.svg"
+              alt=""
+            />
+          </div>
+
+          <div class="location-choice-content">
+            <h2 class="location-name">australia</h2>
+
+            <a href="">see location</a>
+          </div>
+        </div>
+
+        <div class="location-choice">
+          <div class="location-choice-img">
+            <img
+              src="./assets/shared/desktop/illustration-united-kingdom.svg"
+              alt=""
+            />
+          </div>
+
+          <div class="location-choice-content">
+            <h2 class="location-name">united kingdom</h2>
+
+            <a href="">see location</a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <div class="bg-pattern pattern-2">
       <img src="./assets/shared/desktop/bg-pattern-leaf.svg" alt="" />
     </div>
+
+    <section id="deal-container">
+      <div class="deal">
+        <div class="deal-contents">
+          <h1 class="deal-header">World-class talent</h1>
+
+          <p class="deal-copy">
+            We are a crew of strategists, problem-solvers, and technologists.
+            Every design is thoughtfully crafted from concept to launch,
+            ensuring success in its given market. We are constantly updating our
+            skills in a myriad of platforms.
+            <span
+              >Our team is multi-disciplinary and we are not merely interested
+              in form — content and meaning are just as important. We give great
+              importance to craftsmanship, service, and prompt delivery. Clients
+              have always been impressed with our high-quality outcomes that
+              encapsulates their brand’s story and mission.</span
+            >
+          </p>
+        </div>
+
+        <div class="deal-img"></div>
+
+        <div class="deal-pattern">
+          <img
+            src="./assets/shared/desktop/bg-pattern-two-circles.svg"
+            alt=""
+          />
+        </div>
+      </div>
+    </section>
 
     <section id="cta-container">
       <div class="cta-pattern">
