--- a/contact.html
+++ b/contact.html
@@ -33,22 +33,44 @@
     <section id="contact-hero-container">
       <div class="contact-hero">
         <div class="contact-hero-contents">
-          <h1 class="contact-hero-header">About Us</h1>
+          <h1 class="contact-hero-header">Contact Us</h1>
 
           <p class="contact-hero-copy">
-            Founded in 2010, we are a creative agency that produces lasting
-            results for our clients. We’ve partnered with many startups,
-            corporations, and nonprofits alike to craft designs that make real
-            impact. We’re always looking forward to creating brands, products,
-            and digital experiences that connect with our clients’ audiences.
+            Ready to take it to the next level? Let’s talk about your project or
+            idea and find out how we can help your business grow. If you are
+            looking for unique digital experiences that’s relatable to your
+            users, drop us a line.
           </p>
         </div>
 
         <div class="contact-hero-oval">
-          <img src="./assets/home/desktop/bg-pattern-hero-home.svg" alt="" />
+          <img
+            src="./assets/contact/desktop/bg-pattern-hero-desktop.svg"
+            alt=""
+          />
         </div>
 
-        <div class="contact-hero-form"></div>
+        <div class="contact-hero-form">
+          <form>
+            <div class="name">
+              <label for="name">Name</label>
+              <input type="text" id="name" />
+            </div>
+            <div class="email">
+              <label for="email">Email Address</label>
+              <input type="email" id="email" />
+            </div>
+            <div class="phone">
+              <label for="phone">Phone</label>
+              <input type="phone" />
+            </div>
+            <div class="message">
+              <label for="message">Your Message</label>
+              <textarea name="" id="message" cols="30" rows="8"></textarea>
+            </div>
+            <button type="submit">submit</button>
+          </form>
+        </div>
       </div>
     </section>
 
