--- a/about.html
+++ b/about.html
@@ -45,7 +45,10 @@
         </div>
 
         <div class="about-hero-oval">
-          <img src="./assets/home/desktop/bg-pattern-hero-home.svg" alt="" />
+          <img
+            src="./assets/about/desktop/bg-pattern-hero-about-desktop.svg"
+            alt=""
+          />
         </div>
 
         <div class="about-hero-img"></div>
