--- a/about.html
+++ b/about.html
@@ -46,9 +46,20 @@
 
         <div class="about-hero-oval">
           <img
+            id="desktop"
             src="./assets/about/desktop/bg-pattern-hero-about-desktop.svg"
             alt=""
           />
+          <!-- <img
+            id="tablet"
+            src="./assets/about/tablet/image-about-hero.jpg"
+            alt=""
+          />
+          <img
+            id="mobile"
+            src="./assets/about/mobile/image-about-hero.jpg"
+            alt=""
+          /> -->
         </div>
 
         <div class="about-hero-img"></div>
@@ -98,6 +109,13 @@
               src="./assets/shared//desktop/illustration-canada.svg"
               alt=""
             />
+
+            <div class="location-pattern pattern-1">
+              <img
+                src="./assets/shared/desktop/bg-pattern-small-circle.svg"
+                alt=""
+              />
+            </div>
           </div>
 
           <div class="location-choice-content">
@@ -113,6 +131,13 @@
               src="./assets/shared/desktop/illustration-australia.svg"
               alt=""
             />
+
+            <div class="location-pattern pattern-2">
+              <img
+                src="./assets/shared/desktop/bg-pattern-small-circle.svg"
+                alt=""
+              />
+            </div>
           </div>
 
           <div class="location-choice-content">
@@ -128,6 +153,13 @@
               src="./assets/shared/desktop/illustration-united-kingdom.svg"
               alt=""
             />
+
+            <div class="location-pattern pattern-3">
+              <img
+                src="./assets/shared/desktop/bg-pattern-small-circle.svg"
+                alt=""
+              />
+            </div>
           </div>
 
           <div class="location-choice-content">
