--- a/contact.html
+++ b/contact.html
@@ -52,21 +52,45 @@
 
         <div class="contact-hero-form">
           <form>
-            <div class="name">
+            <div class="form-group name">
               <label for="name">Name</label>
+
               <input type="text" id="name" />
+
+              <div class="error name-erorr">
+                Can't be empty
+                <img src="./assets/contact/desktop/icon-error.svg" alt="" />
+              </div>
             </div>
-            <div class="email">
+
+            <div class="form-group email">
               <label for="email">Email Address</label>
               <input type="email" id="email" />
+
+              <div class="error email-erorr">
+                Can't be empty
+                <img src="./assets/contact/desktop/icon-error.svg" alt="" />
+              </div>
             </div>
-            <div class="phone">
+
+            <div class="form-group phone">
               <label for="phone">Phone</label>
               <input type="phone" />
+
+              <div class="error phone-erorr">
+                Can't be empty
+                <img src="./assets/contact/desktop/icon-error.svg" alt="" />
+              </div>
             </div>
-            <div class="message">
+
+            <div class="form-group message">
               <label for="message">Your Message</label>
-              <textarea name="" id="message" cols="30" rows="8"></textarea>
+              <textarea name="" id="message" cols="30" rows="2"></textarea>
+
+              <div class="error message-erorr">
+                Can't be empty
+                <img src="./assets/contact/desktop/icon-error.svg" alt="" />
+              </div>
             </div>
             <button type="submit">submit</button>
           </form>
@@ -82,6 +106,13 @@
               src="./assets/shared//desktop/illustration-canada.svg"
               alt=""
             />
+
+            <div class="location-pattern pattern-1">
+              <img
+                src="./assets/shared/desktop/bg-pattern-small-circle.svg"
+                alt=""
+              />
+            </div>
           </div>
 
           <div class="location-choice-content">
@@ -97,6 +128,13 @@
               src="./assets/shared/desktop/illustration-australia.svg"
               alt=""
             />
+
+            <div class="location-pattern pattern-2">
+              <img
+                src="./assets/shared/desktop/bg-pattern-small-circle.svg"
+                alt=""
+              />
+            </div>
           </div>
 
           <div class="location-choice-content">
@@ -112,6 +150,13 @@
               src="./assets/shared/desktop/illustration-united-kingdom.svg"
               alt=""
             />
+
+            <div class="location-pattern pattern-3">
+              <img
+                src="./assets/shared/desktop/bg-pattern-small-circle.svg"
+                alt=""
+              />
+            </div>
           </div>
 
           <div class="location-choice-content">
