--- a/about.html
+++ b/about.html
@@ -27,6 +27,11 @@
             <li class="link"><a href="contact.html">contact</a></li>
           </ul>
         </div>
+
+        <div class="menu-icon">
+          <i class="fa fa-bars"></i>
+          <i class="fa fa-times"></i>
+        </div>
       </div>
     </header>
 
@@ -50,16 +55,6 @@
             src="./assets/about/desktop/bg-pattern-hero-about-desktop.svg"
             alt=""
           />
-          <!-- <img
-            id="tablet"
-            src="./assets/about/tablet/image-about-hero.jpg"
-            alt=""
-          />
-          <img
-            id="mobile"
-            src="./assets/about/mobile/image-about-hero.jpg"
-            alt=""
-          /> -->
         </div>
 
         <div class="about-hero-img"></div>
