--- a/locations.html
+++ b/locations.html
@@ -27,6 +27,11 @@
             <li class="link"><a href="contact.html">contact</a></li>
           </ul>
         </div>
+
+        <div class="menu-icon">
+          <i class="fa fa-bars"></i>
+          <i class="fa fa-times"></i>
+        </div>
       </div>
     </header>
 
