--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
         <div class="hero-img">
           <img src="./assets/home/desktop/image-hero-phone-re-3.png" alt="" />
         </div>
-        <!-- <img src="./assets/home/desktop/image-hero-phone-re.png" alt="" /> -->
       </div>
     </section>
 
@@ -243,5 +242,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="shared.js"></script>
   </body>
 </html>
