--- a/contact.html
+++ b/contact.html
@@ -179,7 +179,11 @@
     </section>
 
     <div class="bg-pattern pattern-2">
-      <img src="./assets/shared/desktop/bg-pattern-leaf.svg" alt="" />
+      <img
+        class="bg-pattern pattern-2"
+        src="./assets/shared/desktop/bg-pattern-leaf.svg"
+        alt=""
+      />
     </div>
 
     <footer id="footer-container">
