--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@
     </section>
 
     <div class="bg-pattern pattern-1">
-      <img src="./assets/shared/desktop/bg-pattern-leaf.svg" alt="" />
+      <img
+        class="bg-pattern pattern-1"
+        src="./assets/shared/desktop/bg-pattern-leaf.svg"
+        alt=""
+      />
     </div>
 
     <section id="services-container">
@@ -176,7 +180,11 @@
     </section>
 
     <div class="bg-pattern pattern-2">
-      <img src="./assets/shared/desktop/bg-pattern-leaf.svg" alt="" />
+      <img
+        class="bg-pattern pattern-2"
+        src="./assets/shared/desktop/bg-pattern-leaf.svg"
+        alt=""
+      />
     </div>
 
     <section id="cta-container">
