--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
           <div class="location-choice-content">
             <h2 class="location-name">canada</h2>
 
-            <a href="">see location</a>
+            <a href="locations.html">see location</a>
           </div>
         </div>
 
@@ -142,7 +142,7 @@
           <div class="location-choice-content">
             <h2 class="location-name">australia</h2>
 
-            <a href="">see location</a>
+            <a href="locations.html">see location</a>
           </div>
         </div>
 
@@ -164,7 +164,7 @@
           <div class="location-choice-content">
             <h2 class="location-name">united kingdom</h2>
 
-            <a href="">see location</a>
+            <a href="locations.html">see location</a>
           </div>
         </div>
       </div>
@@ -227,7 +227,7 @@
         </div>
 
         <div class="cta-btn">
-          <a href="">get in touch</a>
+          <a href="contact.html">get in touch</a>
         </div>
       </div>
     </section>
