--- a/app-design.html
+++ b/app-design.html
@@ -167,7 +167,7 @@
         </div>
 
         <div class="cta-btn">
-          <a href="">get in touch</a>
+          <a href="contact.html">get in touch</a>
         </div>
       </div>
     </section>
