--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
         </div>
 
         <div class="contact-hero-form">
-          <form>
+          <form id="contact-form">
             <div class="form-group name">
               <label for="name">Name</label>
 
@@ -75,10 +75,15 @@
 
             <div class="form-group email">
               <label for="email">Email Address</label>
-              <input type="email" id="email" />
+              <input id="email" />
 
               <div class="error email-erorr">
                 Can't be empty
+                <img src="./assets/contact/desktop/icon-error.svg" alt="" />
+              </div>
+
+              <div class="error email-format-error">
+                Please enter a valid email
                 <img src="./assets/contact/desktop/icon-error.svg" alt="" />
               </div>
             </div>
@@ -128,7 +133,7 @@
           <div class="location-choice-content">
             <h2 class="location-name">canada</h2>
 
-            <a href="">see location</a>
+            <a href="locations.html">see location</a>
           </div>
         </div>
 
@@ -150,7 +155,7 @@
           <div class="location-choice-content">
             <h2 class="location-name">australia</h2>
 
-            <a href="">see location</a>
+            <a href="locations.html">see location</a>
           </div>
         </div>
 
@@ -172,7 +177,7 @@
           <div class="location-choice-content">
             <h2 class="location-name">united kingdom</h2>
 
-            <a href="">see location</a>
+            <a href="locations.html">see location</a>
           </div>
         </div>
       </div>
