--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
       <div class="header">
         <div class="logo">
           <a href="index.html"
-            ><img src="./assets/shared/desktop/logo-dark.png" alt=""
+            ><img
+              src="./assets/shared/desktop/logo-dark.png"
+              alt=""
+              loading="lazy"
           /></a>
         </div>
 
@@ -49,7 +52,7 @@
           </p>
 
           <div class="hero-btn">
-            <a href="">learn more</a>
+            <a href="about.html">learn more</a>
           </div>
         </div>
 
@@ -109,11 +112,13 @@
             <img
               src="./assets/home/desktop/illustration-passionate.svg"
               alt=""
+              loading="lazy"
             />
             <div class="value-pattern pattern-1">
               <img
                 src="./assets/shared/desktop/bg-pattern-small-circle.svg"
                 alt=""
+                loading="lazy"
               />
             </div>
           </div>
@@ -134,11 +139,13 @@
             <img
               src="./assets/home/desktop/illustration-resourceful.svg"
               alt=""
+              loading="lazy"
             />
             <div class="value-pattern pattern-2">
               <img
                 src="./assets/shared/desktop/bg-pattern-small-circle.svg"
                 alt=""
+                loading="lazy"
               />
             </div>
           </div>
@@ -156,7 +163,11 @@
 
         <div class="value">
           <div class="value-img">
-            <img src="./assets/home/desktop/illustration-friendly.svg" alt="" />
+            <img
+              src="./assets/home/desktop/illustration-friendly.svg"
+              alt=""
+              loading="lazy"
+            />
 
             <div class="value-pattern pattern-3">
               <img
@@ -205,7 +216,7 @@
         </div>
 
         <div class="cta-btn">
-          <a href="">get in touch</a>
+          <a href="contact.html">get in touch</a>
         </div>
       </div>
     </section>
