--- a/locations.html
+++ b/locations.html
@@ -155,7 +155,7 @@
         </div>
 
         <div class="cta-btn">
-          <a href="">get in touch</a>
+          <a href="contact.html">get in touch</a>
         </div>
       </div>
     </section>
