--- a/contact.html
+++ b/contact.html
@@ -90,10 +90,14 @@
 
             <div class="form-group phone">
               <label for="phone">Phone</label>
-              <input type="phone" />
+              <input type="tel" />
 
               <div class="error phone-erorr">
                 Can't be empty
+                <img src="./assets/contact/desktop/icon-error.svg" alt="" />
+              </div>
+              <div class="error phone-format-error">
+                Please enter a valid phone number
                 <img src="./assets/contact/desktop/icon-error.svg" alt="" />
               </div>
             </div>
@@ -108,6 +112,8 @@
               </div>
             </div>
             <button type="submit">submit</button>
+
+            <div class="form-sent-message">SENT!</div>
           </form>
         </div>
       </div>
