--- a/about.html
+++ b/about.html
@@ -9,6 +9,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.2/gsap.min.js"
+      defer
+    ></script>
+    <script src="shared.js" defer></script>
     <title>About</title>
   </head>
   <body>
@@ -272,7 +277,5 @@
         </div>
       </div>
     </footer>
-
-    <script src="shared.js"></script>
   </body>
 </html>
