--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.2/gsap.min.js"
       defer
     ></script>
-    <script src="index.js" defer></script>
+    <script src="shared.js" defer></script>
     <title>Designo</title>
   </head>
   <body>
@@ -266,7 +266,5 @@
         </div>
       </div>
     </footer>
-
-    <script src="shared.js"></script>
   </body>
 </html>
