--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.2/gsap.min.js"
+      defer
+    ></script>
+    <script src="shared.js" defer></script>
     <title>Contact</title>
   </head>
   <body>
@@ -238,7 +243,6 @@
       </div>
     </footer>
 
-    <script src="shared.js"></script>
     <script src="contact.js"></script>
   </body>
 </html>
